--- a/331-intro-to-vite/package.json
+++ b/331-intro-to-vite/package.json
@@ -5,10 +5,10 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "vite build",  
+    "build": "vite build",
     "preview": "vite preview",
     "type-check": "vue-tsc --build",
-    "build-only": "vite build", 
+    "build-only": "vite build",
     "lint:oxlint": "oxlint . --fix -D correctness --ignore-path .gitignore",
     "lint:eslint": "eslint . --fix",
     "lint": "run-s lint:*",
@@ -16,6 +16,8 @@
   },
   "dependencies": {
     "@types/nprogress": "^0.2.3",
+    "@vercel/analytics": "^1.5.0",
+    "@vercel/speed-insights": "^1.2.0",
     "axios": "^1.10.0",
     "nprogress": "^0.2.0",
     "pinia": "^3.0.3",
